force-app/main/default/objects/ucinn_portal_Job__c/ucinn_portal_Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>