force-app/main/default/objects/ucinn_portal_Job__c/fields/Approximate_Salary__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Salary__c</fullName>
    <label>Approximate Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>