force-app/main/default/objects/ucinn_portal_Job__c/fields/Can_Work_Remote__c.field-meta.xml
<CustomField>
    <fullName>Can_Work_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Work Remote</label>
    <type>Checkbox</type>
</CustomField>