force-app/main/default/objects/ucinn_portal_Job__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>ucinn_portal_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>