force-app/main/default/objects/ucinn_portal_Job__c/fields/Class_Or_Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Or_Degree_Level__c</fullName>
    <label>Class Or Degree Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Postdoctoral Scholar</fullName>
            </value>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>