force-app/main/default/objects/ucinn_portal_Job__c/fields/Desired_Majors__c.field-meta.xml
<CustomField>
    <fullName>Desired_Majors__c</fullName>
    <label>Desired Majors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>