force-app/main/default/objects/ucinn_portal_Job__c/fields/External_Job_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Job_Application_Link__c</fullName>
    <label>External Job Application Link</label>
    <type>Url</type>
</CustomField>