force-app/main/default/objects/ucinn_portal_Job__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>