force-app/main/default/objects/ucinn_portal_Job__c/fields/Has_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Contact Information</label>
    <type>Checkbox</type>
</CustomField>