force-app/main/default/objects/ucinn_portal_Job__c/fields/Has_Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multiple Locations</label>
    <type>Checkbox</type>
</CustomField>