force-app/main/default/objects/ucinn_portal_Job__c/fields/Is_Cover_Letter_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Cover_Letter_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cover Letter Required</label>
    <type>Checkbox</type>
</CustomField>