force-app/main/default/objects/ucinn_portal_Job__c/fields/Is_External_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Site</label>
    <type>Checkbox</type>
</CustomField>