force-app/main/default/objects/ucinn_portal_Job__c/fields/Job_Poster_Company__c.field-meta.xml
<CustomField>
    <fullName>Job_Poster_Company__c</fullName>
    <label>Job Poster Company</label>
    <length>75</length>
    <type>Text</type>
</CustomField>