force-app/main/default/objects/ucinn_portal_Job__c/fields/Job_Poster_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Poster_Email__c</fullName>
    <label>Job Poster Email</label>
    <type>Email</type>
</CustomField>