force-app/main/default/objects/ucinn_portal_Job__c/fields/Job_Poster_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Poster_Job_Title__c</fullName>
    <label>Job Poster Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>