force-app/main/default/objects/ucinn_portal_Job__c/fields/Job_Poster_Phone__c.field-meta.xml
<CustomField>
    <fullName>Job_Poster_Phone__c</fullName>
    <label>Job Poster Phone</label>
    <type>Phone</type>
</CustomField>