force-app/main/default/objects/ucinn_portal_Job__c/fields/Job_Poster_School_Degree__c.field-meta.xml
<CustomField>
    <fullName>Job_Poster_School_Degree__c</fullName>
    <label>Job Poster School Degree</label>
    <length>20</length>
    <type>Text</type>
</CustomField>