force-app/main/default/objects/ucinn_portal_Job__c/fields/Master_Job__c.field-meta.xml
<CustomField>
    <fullName>Master_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Job</label>
    <referenceTo>ucinn_portal_Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>ucinn_portal_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>