force-app/main/default/objects/ucinn_portal_Job__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time Entry Level</fullName>
            </value>
            <value>
                <fullName>Full Time Experienced</fullName>
            </value>
            <value>
                <fullName>Internship (Paid)</fullName>
            </value>
            <value>
                <fullName>Internship (Unpaid)</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Co-op</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>