force-app/main/default/objects/ucinn_portal_Job__c/fields/Recruiting_Company__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Company__c</fullName>
    <label>Recruiting Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>