force-app/main/default/objects/ucinn_portal_Job__c/fields/Work_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Per_Week__c</fullName>
    <label>Work Hours Per Week</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>